force-app/main/default/objects/tc9_et__Mark_Up_Margin_Rate_Record__c/tc9_et__Mark_Up_Margin_Rate_Record__c.object-meta.xml
<CustomObject>
    <description>A child object to the Rates Calculator that holds individual Mark Up / Margin Rate details to be used in the calculation of Rate Calculator Lines</description>
    <label>Mark Up / Margin Rate Record</label>
    <nameField>
        <displayFormat>MRR-{0000000000}</displayFormat>
        <label>Mark Up / Margin Rate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mark Up / Margin Rate Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>