force-app/main/default/objects/tc9_et__Mark_Up_Margin_Rate_Record__c/fields/tc9_et__Assignment__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Assignment that applies to the Mark Up / Margin Rate Record</description>
    <inlineHelpText>Defines the Assignment that applies to the Mark Up / Margin Rate Record</inlineHelpText>
    <label>Assignment</label>
    <referenceTo>tc9_pr__Assignment__c</referenceTo>
    <relationshipLabel>Mark Up / Margin Rate Records</relationshipLabel>
    <relationshipName>Mark_Up_Margin_Rate_Records</relationshipName>
    <type>Lookup</type>
</CustomField>