force-app/main/default/objects/tc9_et__Mark_Up_Margin_Rate_Record__c/fields/tc9_et__Candidate__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Employee that applies to the Mark Up / Margin Rate Record</description>
    <inlineHelpText>Defines the Employee that applies to the Mark Up / Margin Rate Record</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mark Up / Margin Rate Records</relationshipLabel>
    <relationshipName>Mark_Up_Margin_Rate_Records</relationshipName>
    <type>Lookup</type>
</CustomField>