force-app/main/default/objects/tc9_et__Mark_Up_Margin_Rate_Record__c/fields/tc9_et__Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Expiry_Date__c</fullName>
    <description>The Date that the Mark Up / Margin Rate Record will Expire and is no longer used</description>
    <inlineHelpText>The Date that the Mark Up / Margin Rate Record will Expire and is no longer used</inlineHelpText>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>