force-app/main/default/objects/tc9_et__Mark_Up_Margin_Rate_Record__c/fields/tc9_et__Mark_Up_Rate_2__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Mark_Up_Rate_2__c</fullName>
    <description>The Mark Up Rate that will be applied in the Mark Up Rate 2 field on the Rate Calculator when the Calculation Method defines the calculation types as Mark Up</description>
    <inlineHelpText>The Mark Up Rate that will be applied in the Mark Up Rate 2 field on the Rate Calculator when the Calculation Method defines the calculation types as Mark Up</inlineHelpText>
    <label>Mark Up Rate 2</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>