force-app/main/default/objects/tc9_et__Mark_Up_Margin_Rate_Record__c/fields/tc9_et__Minimum_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Minimum_Pay_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the value of the minimum pay rate ID that was used to create the rate calculator rate record.</description>
    <inlineHelpText>Stores the value of the minimum pay rate ID that was used to create the rate calculator rate record.</inlineHelpText>
    <label>Minimum Pay Rate</label>
    <referenceTo>tc9_et__Minimum_Pay_Rate__c</referenceTo>
    <relationshipLabel>Mark Up / Margin Rate Records</relationshipLabel>
    <relationshipName>Mark_Up_Margin_Rate_Records</relationshipName>
    <type>Lookup</type>
</CustomField>