force-app/main/default/objects/tc9_et__Mark_Up_Margin_Rate_Record__c/fields/tc9_et__Minimum_Pay_Rate_Details__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Minimum_Pay_Rate_Details__c</fullName>
    <label>Minimum Pay Rate Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>