force-app/main/default/objects/tc9_et__Mark_Up_Margin_Rate_Record__c/fields/tc9_et__Parent_Mark_Up_Margin_Rate_Record__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Parent_Mark_Up_Margin_Rate_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Parent Mark Up / Margin Rate Record that applies to the Mark Up / Margin Rate Record</description>
    <inlineHelpText>Defines the Parent Mark Up / Margin Rate Record that applies to the Mark Up / Margin Rate Record</inlineHelpText>
    <label>Parent Mark Up / Margin Rate Record</label>
    <referenceTo>tc9_et__Mark_Up_Margin_Rate_Record__c</referenceTo>
    <relationshipLabel>Child Mark Up / Margin Rate Records</relationshipLabel>
    <relationshipName>Mark_Up_Margin_Rate_Records</relationshipName>
    <type>Lookup</type>
</CustomField>