force-app/main/default/objects/tc9_et__Mark_Up_Margin_Rate_Record__c/fields/tc9_et__Pay_Codes_Applied__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Pay_Codes_Applied__c</fullName>
    <label>Pay Codes Applied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>