force-app/main/default/objects/tc9_et__Mark_Up_Margin_Rate_Record__c/fields/tc9_et__Primary_Margin_Markup_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Primary_Margin_Markup_Rate__c</fullName>
    <description>System field to manage the UI block for the non-Primary Margin/Markup Rate records where it is linked to the Margin/Markup Rate with Primary Record set to true.</description>
    <inlineHelpText>System field to manage the UI block for the non-Primary Margin/Markup Rate records where it is linked to the Margin/Markup Rate with Primary Record set to true.</inlineHelpText>
    <label>Primary Margin/Markup Rate</label>
    <length>36</length>
    <type>Text</type>
</CustomField>