force-app/main/default/objects/tc9_et__Mark_Up_Margin_Rate_Record__c/fields/tc9_et__Primary_Record__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Primary_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Record</label>
    <type>Checkbox</type>
</CustomField>