force-app/main/default/objects/tc9_et__Mark_Up_Margin_Rate_Record__c/fields/tc9_et__Rate_Calculator__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Rate_Calculator__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the Rate Calculator that applies to the Mark Up / Margin Rate Record</description>
    <inlineHelpText>Defines the Rate Calculator that applies to the Mark Up / Margin Rate Record</inlineHelpText>
    <label>Rate Calculator</label>
    <referenceTo>tc9_et__Rate_Calculator__c</referenceTo>
    <relationshipLabel>Mark Up / Margin Rate Records</relationshipLabel>
    <relationshipName>Mark_Up_Margin_Rate_Records</relationshipName>
    <type>Lookup</type>
</CustomField>