force-app/main/default/objects/tc9_et__Mark_Up_Margin_Rate_Record__c/fields/tc9_et__Update_with_Parent__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Update_with_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the Mark Up / Margin Rate Record will be updated automatically if the Parent Mark Up / Margin Rate Record is updated</description>
    <inlineHelpText>Identifies if the Mark Up / Margin Rate Record will be updated automatically if the Parent Mark Up / Margin Rate Record is updated</inlineHelpText>
    <label>Update with Parent</label>
    <type>Checkbox</type>
</CustomField>