force-app/main/default/objects/tc9_et__Mark_Up_Margin_Rate_Record__c/recordTypes/tc9_et__No_Employee.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__No_Employee</fullName>
    <active>true</active>
    <description>To be used for Mark Up / Margin Rate Records where an Employee is not applied</description>
    <label>No Employee</label>
</RecordType>