force-app/main/default/objects/tc9_et__Mark_Up_Margin_Rate_Record__c/recordTypes/tc9_et__Template.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Template</fullName>
    <active>true</active>
    <description>To be used for Mark Up / Margin Rate Records assigned to Template Rate Calculators</description>
    <label>Template</label>
</RecordType>